[gd_scene load_steps=9 format=3 uid="uid://bj2wma534qgyu"]

[ext_resource type="Script" path="res://Scripts/selectable_component.gd" id="1_g8r8e"]
[ext_resource type="Texture2D" uid="uid://bfbcicwgxiu64" path="res://Sprites/grid.png" id="2_qrn44"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8lf8k"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_vydv6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_exddk"]
resource_name = "select"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.574349, 1.46409),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.06, 1.06)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:skew")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(0.615572, 0.757858, 1.46409, 1.41421),
"update": 0,
"values": [0.0, 0.0349066, -0.0349066, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 4
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(0.133972, 0.812252, 1.56917),
"update": 0,
"values": [0.0, 0.785398, -0.785398]
}

[sub_resource type="Animation" id="Animation_rlysp"]
resource_name = "unselect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(0.535887, 1.56917, 0.574349),
"update": 0,
"values": [Vector2(1.12, 1.12), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:skew")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(0.176777, 0.757858, 1.46409, 1.46409),
"update": 0,
"values": [0.0, -0.0349066, 0.0349066, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 4
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1.46409, 0.812252, 1.56917),
"update": 0,
"values": [-0.785398, 0.785398, 0.0]
}

[sub_resource type="Animation" id="Animation_qr63v"]
resource_name = "secondary_select"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.574349, 1.46409),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.03, 1.03)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:skew")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(0.615572, 0.757858, 1.46409, 1.41421),
"update": 0,
"values": [0.0, 0.279253, -0.279253, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 4
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(0.133972, 0.812252, 1.56917),
"update": 0,
"values": [0.0, 0.785398, -0.785398]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m3nk8"]
_data = {
"RESET": SubResource("Animation_vydv6"),
"secondary_select": SubResource("Animation_qr63v"),
"select": SubResource("Animation_exddk"),
"unselect": SubResource("Animation_rlysp")
}

[node name="SelectableComponent" type="Node2D"]
script = ExtResource("1_g8r8e")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8lf8k")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qrn44")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
speed_scale = 2.25
libraries = {
"": SubResource("AnimationLibrary_m3nk8")
}

[connection signal="secondary_select" from="." to="." method="go_secondary_select"]
[connection signal="select" from="." to="." method="go_select"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
